<resources>
    <string-array name = "amountOfControl">
        <item>None</item>
        <item>Little</item>
        <item>A normal amount</item>
        <item>A lot</item>
        <item>Not Sure</item>
    </string-array>

    <string-array name="ableToRegainControl">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name = "controlOverTime">
        <item>Increased</item>
        <item>Decreased</item>
        <item>Stayed the Same</item>
        <item>Not Sure</item>
    </string-array>

    <string-array name = "wasGameEnjoyed">
        <item>Yes</item>
        <item>No</item>
        <item>Not Sure</item>
    </string-array>
    <string-array name="systemControl">
        <item>None</item>
        <item>Little</item>
        <item>A normal amount</item>
        <item>A lot</item>
        <item>Not Sure</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string name="app_name">19190859_FYP</string>
    <string name="start_game">Start Game</string>
    <string name="view_data">View Input Data</string>
    <string name="instruction_text_main"> Press the buttons for the appropriate actions</string>
    <string name="restart_game_text">Restart Game</string>
    <string name="return_to_main_text">Return to Main Menu</string>
    <string name="display_data">Display all users answers</string>
    <string name="view_Data_by_id">View user answers by input id</string>
    <string name="display_text">Recorded answers will be displayed here</string>
    <string name="gameOverText">Game Over</string>
    <string name="scoreDisplay">Score: </string>
    <string name="zeroText">0</string>
    <string name="questionnaireButtonText">Start Questionnaire</string>
    <string name="submitAnswersText">Submit Questionnaire</string>
    <string name="questionnaireInstructionText">Please answer the below questions.</string>
    <string name="q1Text">Did you enjoy the game?</string>
    <string name="q2Text">How much control did you feels you had over the game?</string>
    <string name="q3Text">Did you feel like your control over the game increased or decreased over time?</string>
    <string name="q4text">How much control did you feel that the system had over your actions</string>
    <string name="q5text">What is your Gender?</string>
    <string name="q6text">How old are you?</string>
    <string name="q7text">In situations where you lost control, did you feel you were able to regain control?</string>
    <string name="gameRulesButtonText">View the Game Rules</string>
    <string name="premiseText">Fly the bird around the clouds to score points. You start with 10 life</string>
    <string name="redRule">Red enemies inflict two damage</string>
    <string name="blueRule">Blue enemies inflict 1 damage</string>
    <string name="greenRule">Green enemies heal you by one point(maximum life is 10)</string>
    <string name="scoreRule">Avoiding clouds and allowing them to fly off screen earns one point per cloud</string>
    <string name="setDifficultyInstructions">Select the difficulty for your game</string>
    <string name="easy">easy</string>
    <string name="normal">normal</string>
    <string name="hard">hard</string>
    <string name="edittextInstruction">Put in user id above to get relevant answers</string>
    <string name="title_activity_set_difficulty">SetDifficultyActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>