<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@drawable/background">

        <TextView
            android:id="@+id/introductiontext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction_text_main"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="100dp">
        <TextView
            android:id="@+id/datatext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/display_text"
            />


    </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">



        <EditText
            android:id="@+id/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:inputType="numberDecimal"

            />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edittextInstruction"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                />
            <Button
                android:id="@+id/viewDataByIDbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:background="@drawable/buttonbg"
                android:text="@string/view_Data_by_id" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                />

            <Button
                android:id="@+id/viewdatabutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"

                android:background="@drawable/buttonbg"
                android:text="@string/display_data" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                />

        <Button
            android:id="@+id/returntomain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/return_to_main_text"
            android:background="@drawable/buttonbg"
            android:layout_marginLeft="-5dp"/>
        </LinearLayout>



    </RelativeLayout>
</ScrollView>