<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".MainActivity" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logov1" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/introductiontext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setDifficultyInstructions"/>

        <Button
            android:id="@+id/easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"

            android:background="@drawable/buttonbg"

            android:text="@string/easy" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                />

        <Button
            android:id="@+id/normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"

            android:background="@drawable/buttonbg"
            android:text="@string/normal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                />
        <Button
            android:id="@+id/hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:background="@drawable/buttonbg"
            android:text="@string/hard"
            />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>