<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".MainActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/startgamebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:background="@drawable/buttonbg"
            android:text="@string/start_game"
            />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                />

        <Button
            android:id="@+id/gameRulesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:background="@drawable/buttonbg"
            android:text="@string/gameRulesButtonText"
            />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                />

            <Button
                android:id="@+id/questionnaireButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonbg"
                android:text="@string/questionnaireButtonText"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                />

            <Button
                android:id="@+id/viewDataButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonbg"
                android:text="@string/view_data"
                />


        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logov1" />


    </RelativeLayout>
</ScrollView>